@@ -2,30 +2,15 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form>
-    <label name="name"/>
-    <field name="name"/>
-    <label name="active"/>
-    <field name="active" xexpand="0" width="100"/>
-    <notebook colspan="4">
-        <page string="General Information" id="general">
-            <label name="account"/>
-            <field name="account"/>
-            <label name="date"/>
-            <field name="date"/>
-            <label name="reference"/>
-            <field name="reference"/>
-            <label name="party"/>
-            <field name="party"/>
-            <label name="journal"/>
-            <field name="journal"/>
-            <label name="move_line"/>
-            <field name="move_line"/>
-            <label name="debit"/>
-            <field name="debit"/>
-            <label name="credit"/>
-            <field name="credit"/>
-            <label name="currency"/>
-            <field name="currency"/>
-        </page>
-    </notebook>
+    <label name="move_line"/>
+    <field name="move_line"/>
+    <newline/>
+    <label name="account"/>
+    <field name="account"/>
+    <label name="date"/>
+    <field name="date"/>
+    <label name="debit"/>
+    <field name="debit"/>
+    <label name="credit"/>
+    <field name="credit"/>
 </form>
